tree-sitter-cabal-project/test/corpus/unicode.txt
================================================================================
Unicode field name
================================================================================

x-無: value

--------------------------------------------------------------------------------

(source_file
  (field
    (field_name)
    (field_value
      (identifier))))

================================================================================
NBSP indentation in a stanza body
================================================================================

package foo
  ghc-options: -O2

--------------------------------------------------------------------------------

(source_file
  (stanza
    (stanza_header
      (keyword)
      (package_name))
    (field
      (field_name)
      (field_value
        (flag_token)))))

================================================================================
NBSP indentation in a field continuation
================================================================================

packages: foo
          bar

--------------------------------------------------------------------------------

(source_file
  (field
    (field_name)
    (field_value
      (identifier)
      (identifier))))
