tree-sitter-cabal-project/test/corpus/value_tokens.txt
================================================================================
Boolean values
================================================================================

tests: True
benchmarks: False
keep-going: yes

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (boolean)))
  (field
    name: (field_name)
    value: (field_value
      (boolean)))
  (field
    name: (field_name)
    value: (field_value
      (identifier))))

================================================================================
Version and constraint
================================================================================

constraints: base >= 4.14 && < 5

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (identifier)
      (constraint_op)
      (version)
      (constraint_op)
      (constraint_op)
      (integer))))

================================================================================
ISO date
================================================================================

index-state: hackage.haskell.org 2025-06-27T20:43:14Z

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (identifier)
      (iso_date))))

================================================================================
URL
================================================================================

url: https://github.com/haskell/cabal

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (url))))

================================================================================
Flag tokens
================================================================================

flags: +profiling -debug +static

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (flag_token)
      (flag_token)
      (flag_token))))

================================================================================
Qualified name (pkg:component)
================================================================================

allow-newer: pkga-1.1.2:dep-pkg

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (qualified_name))))

================================================================================
ghc-options with -with-rtsopts=-N
================================================================================

program-options
  ghc-options: -with-rtsopts=-N

--------------------------------------------------------------------------------

(source_file
  (stanza
    header: (stanza_header
      (keyword))
    (field
      name: (field_name)
      value: (field_value
        (flag_token)
        (flag_token)))))

================================================================================
URL in angle brackets
================================================================================

source-repository-package
  type: git
  location: <https://example.com/repo.git>

--------------------------------------------------------------------------------

(source_file
  (stanza
    header: (stanza_header
      (keyword))
    (field
      name: (field_name)
      value: (field_value
        (identifier)))
    (field
      name: (field_name)
      value: (field_value
        (constraint_op)
        (url)
        (constraint_op)))))

================================================================================
Bare less-than version constraint
================================================================================

constraints: foo < 2

--------------------------------------------------------------------------------

(source_file
  (field
    name: (field_name)
    value: (field_value
      (identifier)
      (constraint_op)
      (integer))))

================================================================================
Quoted string with -- inside (not a comment)
================================================================================

program-options
  ghc-options: "-with-rtsopts=-T -Iw1 --disable-delayed-os-memory-return"

--------------------------------------------------------------------------------

(source_file
  (stanza
    header: (stanza_header
      (keyword))
    (field
      name: (field_name)
      value: (field_value
        (quoted_string)))))

================================================================================
Qualified name with sublibrary set
================================================================================

constraints: mypkg:{internal, extra} >=1.0

--------------------------------------------------------------------------------

(source_file
  (field
    (field_name)
    (field_value
      (qualified_name)
      (constraint_op)
      (version))))

================================================================================
Wildcard package and sublibrary
================================================================================

allow-newer: *:*

--------------------------------------------------------------------------------

(source_file
  (field
    (field_name)
    (field_value
      (qualified_name))))
